--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,9 +1,9 @@
 {
   "name": "frontend",
   "version": "0.0.1",
-  "description": "A Quasar Project",
-  "productName": "Quasar App",
-  "author": "TNSYS03\\TNHAWAII03 <rubayi@gmail.com>",
+  "description": "Tournet ERP",
+  "productName": "Tournet",
+  "author": "rubayi@gmail.com",
   "private": true,
   "scripts": {
     "lint": "eslint --ext .js,.vue ./",
