--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "@quasar/extras": "^1.16.4",
+    "ag-grid-vue3": "^31.1.1",
     "axios": "^1.3.6",
     "quasar": "^2.8.0",
     "vee-validate": "^4.12.5",
