--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,6 +6,13 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto= update
 
 
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=trace
+#Show SQL parameters binding
+logging.level.org.hibernate.orm.jdbc.bind=trace
+logging.level.org.hibernate.stat=debug
+
+
 # App Properties
 tournetERP.app.jwtSecret= ======================Tournet=Spring===========================
 tournetERP.app.jwtExpirationMs=86400000
