--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.datasource.url= jdbc:mysql://211.237.0.181:3306/tnnewerp?useSSL=false
 spring.datasource.username= tnnewerpdb
 spring.datasource.password= Tn!New#Erp%
+server.port=8090
 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto= update
