--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,10 +18,12 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "@quasar/extras": "^1.16.4",
+    "@vitejs/plugin-vue": "^5.0.4",
     "ag-grid-vue3": "^31.1.1",
-    "axios": "^1.3.6",
+    "axios": "^1.6.7",
     "quasar": "^2.8.0",
     "vee-validate": "^4.12.5",
+    "vite": "^5.1.6",
     "vue": "^3.4.18",
     "vue-router": "^4.1.6",
     "vuejs3-logger": "^1.0.0",
@@ -29,14 +31,20 @@
     "yup": "^1.3.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.0",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/preset-env": "^7.24.0",
     "@quasar/app-vite": "^1.4.3",
+    "@types/vue": "^2.0.0",
+    "@vitejs/plugin-legacy": "^5.3.2",
     "autoprefixer": "^10.4.2",
     "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-vue": "^9.0.0",
     "postcss": "^8.4.14",
     "prettier": "^2.5.1",
-    "quasar-app-extension-qgrid": "^1.0.11"
+    "quasar-app-extension-qgrid": "^1.0.11",
+    "typescript": "^5.4.2"
   },
   "engines": {
     "node": "^20 || ^18 || ^16",
