--- a/frontend/jsconfig.json
+++ b/frontend/jsconfig.json
@@ -14,6 +14,9 @@
       "components/*": [
         "src/components/*"
       ],
+      "views/*": [
+        "src/views/*"
+      ],
       "layouts/*": [
         "src/layouts/*"
       ],
