--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@vitejs/plugin-vue": "^5.0.4",
     "ag-grid-vue3": "^31.1.1",
     "axios": "^1.6.7",
+    "moment": "^2.30.1",
     "quasar": "^2.8.0",
     "vee-validate": "^4.12.5",
     "vite": "^5.1.6",
