--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -17,3 +17,6 @@ logging.level.org.hibernate.stat=debug
 # App Properties
 tournetERP.app.jwtSecret= ======================Tournet=Spring===========================
 tournetERP.app.jwtExpirationMs=86400000
+
+spring.servlet.multipart.max-file-size=500KB
+spring.servlet.multipart.max-request-size=500KB
