미치고 팔짝 뛰는 파일 업로드

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -18,5 +18,6 @@ logging.level.org.hibernate.stat=debug
 tournetERP.app.jwtSecret= ======================Tournet=Spring===========================
 tournetERP.app.jwtExpirationMs=86400000
 
+spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=500KB
 spring.servlet.multipart.max-request-size=500KB
