--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -11,18 +11,12 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
+    "resolveJsonModule": true,
     "baseUrl": ".",
-    "lib": [
-      "es2019",
-      "dom"
-    ],
-    "types": [
-      "webpack-env"
-    ],
+    "lib": ["es2019", "dom"],
+    "types": ["webpack-env"],
     "paths": {
-      "@/*": [
-        "src/*"
-      ]
+      "@/*": ["src/*"]
     }
   },
   "include": [
