--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -109,7 +109,16 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>net.sf.jasperreports</groupId>
+            <artifactId>jasperreports</artifactId>
+            <version>6.20.0</version>
+        </dependency>
+
     </dependencies>
+
+
 
     <build>
         <plugins>
