--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@quasar/extras": "^1.16.4",
     "@vueform/multiselect": "^2.6.7",
     "ag-grid-community": "^31.2.1",
+    "ag-grid-enterprise": "^31.3.1",
     "ag-grid-vue3": "^31.2.1",
     "axios": "^1.6.8",
     "core-js": "^3.37.0",
