--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,10 +23,12 @@
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "quasar": "^2.8.0",
+    "vee-validate": "^4.12.8",
     "vue": "^3.4.18",
     "vue-i18n": "^10.0.0-alpha.3",
     "vue-router": "^4.0.12",
-    "vuex": "^4.1.0"
+    "vuex": "^4.1.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@quasar/app-webpack": "^3.9.2",
