--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
+backend/.gitignore
+backend/mvnw*
+backend/.mvn
 
 *.class
 *.properties
+uploads
