--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
     "vue-i18n": "^10.0.0-alpha.3"
+  },
+  "devDependencies": {
+    "@types/webpack-env": "^1.18.5"
   }
 }
